--- a/style.css
+++ b/style.css
@@ -108,3 +108,7 @@ body {
 .hour-row:nth-child(2n) {
     background-color: hsl(200, 100%, 70%);
 }
+
+.hour-row > td { 
+    padding: 0.25rem 0.5rem;
+}
